--- a/git/all.html
+++ b/git/all.html
@@ -38,6 +38,8 @@ $ git add -u</pre>
 <p>— фиксирует изменения, добавленные в staging area.</p>
 <pre>$ git commit -a -m "comment"</pre>
 <p>— фиксирует все изменения, сделанные в рабочей директории. Особенность <code>-a</code> в том, что перед этой командой ней не нужно выполнять команду <code>git add .</code> (это не распространяется на новые файлы, которые ещё никогда ранее не добавлялись).</p>
+<pre>git commit --amend -m "New commit message"</pre>
+<p>— переименовать последний незапушеный коммит</p>
 <h3>git checkout</h3>
 <p>— загрузить любое состояние репозитория (checkout можно выполнить, только тогда, когда у нет никаких изменений в текущем состоянии). При каждой операции checkout ссылка HEAD указывает на текущее положение (читать как: метка HEAD — это текущее состояние репозитория, т.е. переносится чекаутом).</p>
 <pre>$ git checkout branchNameOrCommitHash</pre>
