--- a/php/all.html
+++ b/php/all.html
@@ -72,6 +72,40 @@ echo &quot;&lt;/pre&gt;&quot;;
 }</pre>
 
 <h2>ООП</h2>
+<h3>Инкапсуляция / полиморфизм / наследование</h3>
+<p>Инкапсуляция — механизм который позволяет отнести свойства и методы к объекту и закрыть доступ к некоторым из них извне.</p>
+<p>Полиморфизм — свойство метода совершать различные операции в зависимости от типа передаваемых ему данных.</p>
+<p>Наследование — процесс при котором свойства и методы одного класса объектов передаются другому классу объектов.</p>
+<h3>Public / private / protected</h3>
+<p><code>public</code> — отовсюду.</p>
+<p><code>private</code> — внутри класса, не наследуется.</p>
+<p><code>protected</code> — внутри класса, наследуется.</p>
+
+<h3>Интерфейс / класс / объект / свойство / метод</h3>
+<pre class="prettyprint lang-php">[final] [abstract] class Имя_класса [{extends,implements} {Имя_класса,Имя_интерфейса[ Имя_интерфейса]} { // Класс
+    [public/private/protected] [static] $Имя_свойства; // Свойство объекта
+    [final] [public/private/protected] [static] function Имя_метода () { // Метод объекта
+        self::$Имя_свойства; // Обращение к статическому свойству
+        self::Имя_метода(); // Обращение к статическому методу
+        parent::$Имя_свойства; // Обращение к статическому свойству родительского класса
+        parent::Имя_метода(); // Обращение к статическому методу родительского класса
+        static::$Имя_свойства; // Обращение к статическому свойству при переопределении свойства дочерним классом (позднее статическое связывание)
+        static::Имя_метода(); // Обращение к статическому методу при переопределении метода дочерним классом (позднее статическое связывание)
+        $this->Имя_свойства; // Обращение к свойству экземпляра
+        $this->Имя_метода(); // Обращение к методу экземпляра
+    }
+}
+Имя_класса::$Имя_свойства; // Обращение к свойству без создания объекта (свойство должно быть статическим)
+Имя_класса::Имя_метода(); // Обращение к методу без создания объекта (метод должен быть статическим)
+$Имя_объекта = new Имя_класса; // Создание экземпляра (объекта) класса
+$Имя_объекта->Имя_свойства; // Обращение к свойству объекта
+$Имя_объекта->Имя_метода(); // Обращение к методу объекта
+</pre>
+<p><code>interface</code> — указывает, какие методы и свойства должен включать класс.</p>
+<p><code>implements</code> — наследование интерфейса классом.</p>
+<p><code>abstract</code> — описательный класс, в отличии от интерфейса может содержать описанные методы.</p>
+<p><code>extends</code> — наследование класса.</p>
+<p><code>final</code> — не может быть унаследован.</p>
 <h3>Функции для работы с классами</h3>
 <h4>class_exists()</h4>
 <pre class="prettyprint lang-php">
