--- a/linux/all.html
+++ b/linux/all.html
@@ -193,6 +193,13 @@ EndSection</pre> Сочетания по умолчанию лежат в фай
     <kbd>ctrl+alt+down</kbd> (на
     <kbd>ctrl+alt+tab</kbd>) для удобной работы в SublimeText3</p>
 <h2>Дополнительное ПО</h2>
+
+<h3>FreeRdp</h3>
+<pre>xfreerdp /cert-ignore –no-nego /u:administrator /p:123 /v:192.168.172.129 /port:2179 /vmconnect:8021D293-FA6F-4CB5-AFD2-2499936D0949</pre>
+<pre>xfreerdp --version</pre>
+<p>case of 1.0.2 the "old" command line needs to be used. That would be something like xfreerdp -u username servername:port - server name and port must be the last argument.</p>
+<pre>xfreerdp -u username servername:port</pre>
+
 <h3>gpick</h3>
 <p>— улучшенный инструмент выбора цвета, позволяющий выбирать цвета из любых мест экрана</p>
 <h3>VirtualBox</h3>
