--- a/rails/all.html
+++ b/rails/all.html
@@ -24,3 +24,7 @@
 <h2>Slimrb</h2>
 <h3>slim to rb</h3>
 <p><code class="prettyprint lang-sh copyToClipboard">slimrb -e 'index.html.slim' > index.html.erb</code></p>
+
+<h2>Консоль рельсы</h2>
+<pre class="prettyprint lang-sh copyToClipboard">rails c</pre>
+<pre class="prettyprint lang-rb">Agava::Model::Article.using(:cut_cut).connection.execute('show tables;').to_a</pre>
