--- a/windows/all.html
+++ b/windows/all.html
@@ -6,5 +6,24 @@
 </ol>
 <h3>RDP, Подключение к удаленному рабочему столу через noip</h3>
 <p><kbd>Пуск</kbd> &rarr; <kbd>Все программы</kbd> &rarr; <kbd>Стандартные</kbd> &rarr; <kbd>Подключение к удаленному рабочему столу</kbd>, Компьютер: <code>&lt;mydomain&gt;.ddns.net:&lt;myport&gt;</code></p>
-<p>Например <var>rdpmyhome.ddns.net:4321</var>. Тогдамы должны иметь свой поддомен (<var>rdpmyhome</var>) на сайте <var>noip.net</var>, а на роутере должен быть настроен <strong>NAT</strong> (трансляция сетевых адресов) примерно так: 1. <var>Указан интерфейс</var> (например L2TP0). 2. <var>Протокол:</var> TCP. 3. <var>Порт</var> (TCP/UPD): <var>4321</var>. 4. <var>Перенаправить на адрес</var>: 192.168.1.100 (Настроен и включен <strong>Сервер DHCP</strong> для раздачи IP по МАС адресам). 5. <var>Новый номер порта назначения:</var> 3389.</p>
-
+<p>Например <var>rdpmyhome.ddns.net:4321</var>:</p>
+<ul>
+	<li>Тогдамы должны иметь свой поддомен (<var>rdpmyhome</var>) на сайте <var>noip.net</var>,</li>
+	<li>а на роутере должен быть настроен <strong>NAT</strong> (трансляция сетевых адресов) примерно так:
+		<ol>
+		<li><var>Указан интерфейс</var> (внешний L2TP0).</li>
+		<li><var>Протокол:</var> TCP.</li>
+		<li><var>Порт входящий</var> (TCP/UPD): <var>4321</var>.</li>
+		<li><var>Перенаправить на IP</var>: 192.168.1.100 (Настроен и включен <strong>Сервер DHCP</strong> для раздачи IP по МАС адресам).</li>
+		<li><var>Новый номер порта назначения:</var> 3389.</li>
+		</ol>
+	</li>
+	<li>Добавить правила для внешнего интерфейса (L2TP0), разрешающие внешние подключения (Межсетевой экран): 
+		<br>Правило: <strong>Разрешить</strong>, 
+		<br>IP-адрес источника: <strong>Любой</strong>, 
+		<br>IP-адрес назначения: <strong>Любой</strong>, 
+		<br>Номер порта источника: <strong>Любой</strong>, 
+		<br>Протокол: <strong>TCP</strong>, 
+		<br>Порт равен: <strong>80</strong>.
+	</li>
+</ul>
