--- a/windows/all.html
+++ b/windows/all.html
@@ -24,6 +24,6 @@
 		<br>IP-адрес назначения: <strong>Любой</strong>, 
 		<br>Номер порта источника: <strong>Любой</strong>, 
 		<br>Протокол: <strong>TCP</strong>, 
-		<br>Порт равен: <strong>80</strong>.
+		<br>Порт равен: <strong>80</strong>, <strong>4321</strong>&#8230;
 	</li>
 </ul>
