--- a/bash/all.html
+++ b/bash/all.html
@@ -95,6 +95,8 @@ sed -r 's/\/\/.*$//g' ./example2.cpp
 # Заменим функцию foo с параметрами на функцию bar, а функцию foo без параметров не изменять:
 sed -r 's/foo(\([^\)]+\))/bar\1/' ./example2.cpp
 </pre>
+<h3>chown</h3>
+<pre class="copyToClipboard">sudo chown -R $USER $HOME/.composer</pre>
 <h3>chmod</h3>
 <p>Права записываются одной строкой сразу для трёх типов пользователей: владелец, группа, остальные. Права могут быть записаны в числовом ([0-7][0-7][0-7]) и в символьном виде ([r-][w-][x-][r-][w-][x-][r-][w-][x-]).</p>
 <p>Права числовым видом <code>644</code> и в символьном виде: <code>rw-r--r--</code>. В двоичном виде эти права выглядели бы так <code>110100100</code>, что означает: владелец имеет право на чтение и запись, а группа и остальные имеют право только на чтение.</p>
