--- a/sublime-text-3/all.html
+++ b/sublime-text-3/all.html
@@ -1,3 +1,14 @@
+<h2>Консоль</h2>
+<p>Открываем консоль <kbd>Ctrl</kbd>+<kbd>`</kbd> или <q>View</q> &rarr; <q>Show Console</q></p>
+<h3>Отображать команды в консоли</h3>
+<p>Вводим команду: <code class="copyToClipboard">sublime.log_commands(True)</code></p>
+
+<h2>Sublime API...</h2>
+<ul>
+    <li><a href="https://www.sublimetext.com/docs/3/api_reference.html" target="_blank">https://www.sublimetext.com/docs/3/api_reference.html</a></li>
+    <li><a href="https://habrahabr.ru/post/136529/" target="_blank">https://habrahabr.ru/post/136529/</a></li>
+</ul>
+
 <h2>Основы</h2>
 <h3>Проекты</h3>
 <p><strong>Очистить список проектов в „Switch Project“:</strong></p>
