--- a/html/all.html
+++ b/html/all.html
@@ -5,8 +5,9 @@
 		<tr>
 			<th>Знак</th>
 			<th>Наименование</th>
-			<th>Номер в Юникоде</th>
-			<th>HTML-код</th>
+			<th>Номер в Юникоде<sub>16</sub></th>
+            <th>HTML-код (Номер в Юникоде<sub>10</sub>)</th>
+			<th>Мнемоника</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -14,30 +15,34 @@
 			<td><span class="lead">&#164;</span></td>
 			<td>Знак валюты</td>
 			<td>U+00A4</td>
-			<td>&amp;#164;</dt>
-		</tr>
+            <td>&amp;#164;</td>
+            <td></td>
+        </tr>
         <tr>
             <td><span class="lead">&#8381;</span></td>
             <td>Знак рубля</td>
             <td>U+20BD</td>
-            <td>&amp;#8381;</dt>
+            <td>&amp;#8381;</td>
+            <td></td>
         </tr>
-		<tr>
-			<td><span class="lead">&#8222;&#8220;</span></td>
-			<td>Кавычки русские Лапки</td>
-			<td></td>
-			<td>
-                <p>Десятичный код:</p>
-                <pre>&amp;#8222;&amp;#8220;</pre>
-                <p>Мнемоника:</p>
-                <pre>&amp;bdquo;&amp;ldquo;</pre>
-            </dt>
-		</tr>
-	</tbody>
+        <tr>
+            <td><span class="lead">&#8222;&#8220;</span></td>
+            <td>Кавычки русские Лапки</td>
+            <td></td>
+            <td><pre>&amp;#8222;&amp;#8220;</pre></td>
+            <td><pre>&amp;bdquo;&amp;ldquo;</pre></td>
+        </tr>
+        <tr>
+            <td><span class="lead">&#160;</span></td>
+            <td>Неразрывный пробел</td>
+            <td>U+00A0</td>
+            <td><pre class="copyToClipboard">&amp;#160;</pre></td>
+            <td></td>
+        </tr>
+    </tbody>
 </table>
 
 
-<pre>&amp;#8381; </pre>
 
 
 <h3>Знаки препинания</h3>
