--- a/js/version/version.html
+++ b/js/version/version.html
@@ -4,6 +4,6 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<script src="string.js"></script>
+		<script src="version.js"></script>
 	</body>
 </html>
