--- a/jstree/test/test.html
+++ b/jstree/test/test.html
@@ -10,9 +10,11 @@
 			<div class="ui grid">
 				<div class="eight wide column">
 					<div id="struct_left"></div>
+					<div class="ui button" id="save_left">Сохранить</div>
 				</div>
 				<div class="eight wide column">
 					<div id="struct_right"></div>
+					<div class="ui button" id="save_right">Сохранить</div>
 				</div>
 			</div>
 		</div>
@@ -20,6 +22,7 @@
 		<script type="text/javascript" src="/theme/bower/semantic/dist/semantic.min.js"></script>
 		<script type="text/javascript" src="/theme/bower/jstree/dist/jstree.min.js"></script>
 		<script type="text/javascript" src="/js/lib.js"></script>
+		<script type="text/javascript" src="config.js"></script>
 		<script type="text/javascript" src="test.js"></script>
 	</body>
 </html>
